# ilda.rs

./: .gitignore  Cargo.toml  README.md
examples/: read_file.rs  render_test_pattern.rs
src/: animation.rs  color.rs  data.rs  error.rs  idtf.rs  lib.rs  limit.rs  parser.rs  reader.rs  writer.rs
